오류 수정(이동)